--- a/new/themes/my_tv.css
+++ b/new/themes/my_tv.css
@@ -3,6 +3,6 @@
 tr, td {display: inline;} 
 tr:first-child {display: block}
 tr:last-child td:last-child::before {content: "\2013\00A0" }
-.leaflet-container {font: 18px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;}
+.leaflet-container td {font: 18px/1.5 "Helvetica Neue", Arial, Helvetica, sans-serif;}
 .leaflet-popup-content-wrapper {background: #3f51b5; color: white; text-shadow: 0 0 1px black;}
-.leaflet-container a {color:white}
+.leaflet-container td a {color:white}
